2004-10-04 16:08 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridPack) conn structures are now packed.
	* src/grid.c (gridRenumber) conn structures are now renumbered.

2004-10-04 15:50 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridConn2Node) Fixed. gridCreateConn called under hood.
	* src/grid.c (gridCreateConn) Exposed. Error if called when conn exits
	* src/grid.c (gridConnError,gridSetConnError) created to store
	edge length errors for adaptation.

2004-10-03 01:15 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.* (gridCollapseEdge) added an extra check to make
	sure that an edge collapse does not cause faces on the top and
	bottom of the gem to have the same connectivity after
	collapse. This showed up as a pathological case, which I have
	never seen before.

2004-10-01 09:07 Mike Park  <mike.park@nasa.gov>

	* test/cyl.* Added a unit cylander test case with 5 unit outer
	boundary. Created Plot3D surfaces with cyl.m, patched up with
	GridTool (cyl.rst), and dumped Native cyl.dat and cyl.capri.

2004-09-29 23:40 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridConn2Node) Added. returns the nodes at each end
	of the connection(conn).

2004-09-29 23:05 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridCell2Conn,gridNConn,gridEraseConn) Added
	functions to compute a static snapshot of the current unique
	connections (edges) in the mesh. I used the word 'conn' and not
	'edge' because edge currently refers to CAD geometry edge
	segements. The first call to gridCell2Conn automagically computes
	all the conns numbered 0 to gridNConn-1. gridEraseConn deallocates
	conn memory.

2004-09-29 16:25 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c added argument -c to allow a cylindrical
	variation in spacing. added -m to turn on gridmovement for
	projection.

2004-09-29 16:20 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwap) Added gridRemoveTwoFaceCell to cell
	loop. Note gridSwap is only for the sequential driver.
